Added links to subjects

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
    <main>
 
       <ol>
-         <li><a href="">Onderwerp</a></li>
-         <li><a href="">Onderwerp</a></li>
-         <li><a href="">Onderwerp</a></li>
-         <li><a href="">Onderwerp</a></li>
-         <li><a href="">Onderwerp</a></li>
-         <li><a href="">Onderwerp</a></li>
-         <li><a href="">Onderwerp</a></li>
-         <li><a href="">Onderwerp</a></li>
+         <li><a href="./subjects/afbeeldingen-uitzetten.html">Onderwerp 1</a></li>
+         <li><a href="./subjects/custom-fonts-uitzetten.html">Onderwerp 2</a></li>
+         <li><a href="./subjects/kleur-uitzetten-en-kleurenblindheid-instellen.html">Onderwerp 3</a></li>
+         <li><a href="./subjects/muis-trackpad-werkt-niet.html">Onderwerp 4</a></li>
+         <li><a href="./subjects/breedband-internet-uitzetten.html">Onderwerp 5</a></li>
+         <li><a href="./subjects/javascript-uitzetten.html">Onderwerp 6</a></li>
+         <li><a href="./subjects/cookies-niet-accepteren.html">Onderwerp 7</a></li>
+         <li><a href="./subjects/content-blockers-en-ad-blockers.html">Onderwerp 8</a></li>
       </ol>
 
    </main>
