--- a/subjects/cookies-niet-accepteren.html
+++ b/subjects/cookies-niet-accepteren.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Subject</title>
+   <title>7. Cookies niet accepteren</title>
 
    <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -13,8 +13,77 @@
 <body>
 
    <header>
-      <h1>Onderwerp 7</h1>
+      <h1>7. Cookies niet accepteren</h1>
    </header>
+
+   <main>
+
+      <section>
+
+         <section>
+            <figure>
+               <img src="../assets/imgs/jevona/placeholder.jpeg" alt="">
+            </figure>
+         </section>
+
+         <!-- Vraag 1 -->
+         <section>
+            <h2>1. Problemen die deze features kunnen veroorzaken</h2>
+
+            <ul>
+               <li>Probleem 1 –</li>
+               <li>Probleem 2 –</li>
+               <li>Probleem 3 –</li>
+            </ul>
+         </section>
+
+
+         <!-- Vraag 2 -->
+         <section>
+            <h2>2. Hoe zou je dit kunnen testen</h2>
+
+            <ul>
+               <li>Manier 1 –</li>
+               <li>Manier 2 –</li>
+               <li>Manier 3 –</li>
+            </ul>
+         </section>
+
+
+         <!-- Vraag 3 -->
+         <section>
+            <h2>3. Websites waar dit ook problemen oplevert</h2>
+
+            <ul>
+               <li>Website 1 –</li>
+               <li>Website 2 –</li>
+               <li>Website 3 –</li>
+            </ul>
+         </section>
+
+
+         <section>
+            <h2>4. Hoe kunnen wij dit oplossen</h2>
+
+            <p>
+               Dit is een faketekst. Alles wat hier staat is slechts om een indruk te geven van het grafische effect van
+               tekst op deze plek.
+            </p>
+         </section>
+
+
+      </section>
+
+   </main>
+
+   <footer>
+      <ol>
+         <li><a href="">Bron 1</a></li>
+         <li><a href="">Bron 2</a></li>
+         <li><a href="">Bron 3</a></li>
+      </ol>
+   </footer>
+
 
 </body>
 
