--- a/subjects/cookies-niet-accepteren.html
+++ b/subjects/cookies-niet-accepteren.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Subject</title>
+   <title>7. Cookies niet accepteren</title>
 
    <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -13,8 +13,77 @@
 <body>
 
    <header>
-      <h1>Onderwerp 7</h1>
+      <h1>7. Cookies niet accepteren</h1>
    </header>
+
+   <main>
+
+      <section>
+
+         <section>
+            <figure>
+               <img src="../assets/imgs/menno/cookies.png" alt="">
+            </figure>
+         </section>
+
+         <!-- Vraag 1 -->
+         <section>
+            <h2>1. Problemen die deze features kunnen veroorzaken</h2>
+
+            <ul>
+               <li>- Verkeerd ingevoerde gegevens kunnen worden opgeslagen, ook op een openbare PC</li>
+               <li>- Privacy data kan worden gebruikt en verkocht</li>
+               <li>- Cookies kan de performance vertragen</li>
+               <li>- Cookies kunnen ook jouw locatie meegeven, zo zou je bijvoorbeeld op een nieuwssite hierdoor lokaal nieuws kunnen zien.</li>
+            </ul>
+         </section>
+
+
+         <!-- Vraag 2 -->
+         <section>
+            <h2>2. Hoe zou je dit kunnen testen</h2>
+
+            <ul>
+               <li>Online sources zoals cookiechecker</li>
+               <li>developer tools, zien wat er mee komt</li>
+               <li>Cache regelmatig legen</li>
+            </ul>
+         </section>
+
+
+         <!-- Vraag 3 -->
+         <section>
+            <h2>3. Websites waar dit ook problemen oplevert</h2>
+
+            <ul>
+               <li>Buienradar ziet geen locatie zonder cookies</li>
+               <li>Op algemene computers kan dit problemen opleveren, denk bijvoorbeeld aan het tonen van een gebruikte e-mail</li>
+               <li>Reclames kunnen inpact hebben op de site performance</li>
+            </ul>
+         </section>
+
+
+         <section>
+            <h2>4. Hoe kunnen wij dit oplossen</h2>
+
+            <p>
+               Websites moeten bezoekers vragen of ze cookies toestaan, dit kan je weigeren. 
+            </p>
+         </section>
+
+
+      </section>
+
+   </main>
+
+   <footer>
+      <ol>
+         <li><a href="">Bron 1</a></li>
+         <li><a href="">Bron 2</a></li>
+         <li><a href="">Bron 3</a></li>
+      </ol>
+   </footer>
+
 
 </body>
 
