--- a/subjects/content-blockers-en-ad-blockers.html
+++ b/subjects/content-blockers-en-ad-blockers.html
@@ -8,6 +8,7 @@
    <title>8. Content blockers en ad blockers</title>
 
    <link rel="stylesheet" href="../css/style.css">
+   <link rel="stylesheet" href="../css/members/nigel.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
 
          <section>
             <figure>
-               <img src="../assets/imgs/jevona/placeholder.jpeg" alt="">
+               <img src="../assets/imgs/nigel/headertop2.svg" alt="">
             </figure>
          </section>
 
@@ -31,9 +32,9 @@
             <h2>1. Problemen die deze features kunnen veroorzaken</h2>
 
             <ul>
-               <li>Probleem 1 –</li>
-               <li>Probleem 2 –</li>
-               <li>Probleem 3 –</li>
+               <li>Content op de pagina kan missen</li>
+               <li>Bij het gebruik van adblock kunnen er lege gaten in de pagina vallen</li>
+               <li>Het gebruik van geen adblocker kan leiden tot een tragere pagina.</li>
             </ul>
          </section>
 
@@ -43,9 +44,8 @@
             <h2>2. Hoe zou je dit kunnen testen</h2>
 
             <ul>
-               <li>Manier 1 –</li>
-               <li>Manier 2 –</li>
-               <li>Manier 3 –</li>
+               <li>Je kan je adblocker aan en uit zetten, en zien wat het verschil is.</li>
+               <li>Gebruik een content blocker, en haal content weg uit de pagina. Is je webpagina nog steeds bruikbaar?</li>
             </ul>
          </section>
 
@@ -55,9 +55,9 @@
             <h2>3. Websites waar dit ook problemen oplevert</h2>
 
             <ul>
-               <li>Website 1 –</li>
-               <li>Website 2 –</li>
-               <li>Website 3 –</li>
+               <li>NU.nl laad trager als je geen adblock hebt.</li>
+               <li>Op veel websites laden de advertenties later in, waardoor het niet heel mooi is.</li>
+               <li>Youtube | Je videos laden later omdat advertenties ook laden.</li>
             </ul>
          </section>
 
@@ -66,8 +66,11 @@
             <h2>4. Hoe kunnen wij dit oplossen</h2>
 
             <p>
-               Dit is een faketekst. Alles wat hier staat is slechts om een indruk te geven van het grafische effect van
-               tekst op deze plek.
+               Voor een content blockers is weinig te doen. Een gebruiker kiest ervoor om een bepaald stuk content te blokkeren. Ook de HTML word gegehaald, dus dit is lastig op te lossen.
+            </p>
+
+            <p>
+               Wat we kunnen doen voor adblockers is de webpagina op een manier maken dat de layout niet in elkaar valt als er advertenties niet geladen worden. Dit kan ook toegepast worden op conent blockers.
             </p>
          </section>
 
@@ -78,9 +81,8 @@
 
    <footer>
       <ol>
-         <li><a href="">Bron 1</a></li>
-         <li><a href="">Bron 2</a></li>
-         <li><a href="">Bron 3</a></li>
+         <li><a href="https://eqsash.com/articles/chem-opasny-blokirovshchiki-reklamy-ih-dostoinstva-i-nedostatki?l=en">Pros & Cons of adblockers</a></li>
+         <li><a href="https://getadblock.com/nl/chrome/">Header Image</a></li>
       </ol>
    </footer>
 
