--- a/subjects/afbeeldingen-uitzetten.html
+++ b/subjects/afbeeldingen-uitzetten.html
@@ -22,7 +22,7 @@
 
          <section>
             <figure>
-               <img src="../assets/imgs/jevona/placeholder.jpeg" alt="">
+               <img src="../assets/imgs/jevona/image.png" alt="image blocker on hva cmd">
             </figure>
          </section>
 
@@ -31,56 +31,43 @@
             <h2>1. Problemen die deze features kunnen veroorzaken</h2>
 
             <ul>
-               <li>Probleem 1 –</li>
-               <li>Probleem 2 –</li>
-               <li>Probleem 3 –</li>
+               <li>Probleem 1 – Je ziet de image niet, maar een leeg plek</li>
+               <li>Probleem 2 – Je ziet een par van de images wel</li>
             </ul>
          </section>
-
 
          <!-- Vraag 2 -->
          <section>
             <h2>2. Hoe zou je dit kunnen testen</h2>
 
             <ul>
-               <li>Manier 1 –</li>
-               <li>Manier 2 –</li>
-               <li>Manier 3 –</li>
+               <li>Manier 1 – Door een extension te gebruiken, bv. image blocker, block image</li>
+               <li>Manier 2 – Verandert de instelling van je browser om image niet te loaden</li>
             </ul>
          </section>
-
 
          <!-- Vraag 3 -->
          <section>
             <h2>3. Websites waar dit ook problemen oplevert</h2>
 
             <ul>
-               <li>Website 1 –</li>
-               <li>Website 2 –</li>
-               <li>Website 3 –</li>
+               <li>Website 1 – Facebook</li>
             </ul>
          </section>
-
 
          <section>
             <h2>4. Hoe kunnen wij dit oplossen</h2>
 
-            <p>
-               Dit is een faketekst. Alles wat hier staat is slechts om een indruk te geven van het grafische effect van
-               tekst op deze plek.
-            </p>
+            <p>De structuur van de website van HvA - CMD toepassen, waar je kan zien dat als iets niet goed gaat met de loading van de images, bliijft de layout hetzelfde en krijg je dan alleen lege blokken </p>
          </section>
-
-
       </section>
 
    </main>
 
    <footer>
       <ol>
-         <li><a href="">Bron 1</a></li>
-         <li><a href="">Bron 2</a></li>
-         <li><a href="">Bron 3</a></li>
+         <li><a href="https://www.makeuseof.com/chrome-block-webpage-images/">Webpage blocker</a></li>
+         <li><a href="https://www.hva.nl/opleidingen/communication-and-multimedia-design">Hva - CMD</a></li>
       </ol>
    </footer>
 
