Added Metaphor page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
    <main>
 
       <ol>
+         <li><a href="metaphor.html">Metaphor</a></li>
          <li><a href="./subjects/afbeeldingen-uitzetten.html">Onderwerp 1</a></li>
          <li><a href="./subjects/custom-fonts-uitzetten.html">Onderwerp 2</a></li>
          <li><a href="./subjects/kleur-uitzetten-en-kleurenblindheid-instellen.html">Onderwerp 3</a></li>
