--- a/metaphor.html
+++ b/metaphor.html
@@ -6,9 +6,34 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Metaphor</title>
+
+   <link rel="stylesheet" href="./css/metaphor.css">
 </head>
 
 <body>
+
+
+   <main>
+
+      <!-- Draaideur voorbeeld 1 -->
+      <section>
+         <div></div>
+         <div></div>
+      </section>
+
+      <!-- Draaideur voorbeeld 2 -->
+      <section>
+         <div></div>
+         <div></div>
+      </section>
+
+      <!-- Draaideur voorbeeld 3 -->
+      <section>
+         <div></div>
+         <div></div>
+      </section>
+   </main>
+
 
 </body>
 
