--- a/subjects/kleur-uitzetten-en-kleurenblindheid-instellen.html
+++ b/subjects/kleur-uitzetten-en-kleurenblindheid-instellen.html
@@ -22,7 +22,7 @@
 
          <section>
             <figure>
-               <img src="../assets/imgs/jevona/placeholder.jpeg" alt="">
+               <img src="../assets/imgs/jevona/color.png" alt="">
             </figure>
          </section>
 
@@ -31,9 +31,8 @@
             <h2>1. Problemen die deze features kunnen veroorzaken</h2>
 
             <ul>
-               <li>Probleem 1 –</li>
-               <li>Probleem 2 –</li>
-               <li>Probleem 3 –</li>
+               <li>Probleem 1 – Sommige teksten worden onduidelijk</li>
+               <li>Probleem 2 – Niet alleen is leesbaar</li>
             </ul>
          </section>
 
@@ -43,9 +42,8 @@
             <h2>2. Hoe zou je dit kunnen testen</h2>
 
             <ul>
-               <li>Manier 1 –</li>
-               <li>Manier 2 –</li>
-               <li>Manier 3 –</li>
+               <li>Manier 1 – Plugin gebruiken , colorblindly</li>
+               <li>Manier 2 – In dev tools van de browser de css veranderen </li>
             </ul>
          </section>
 
@@ -55,9 +53,7 @@
             <h2>3. Websites waar dit ook problemen oplevert</h2>
 
             <ul>
-               <li>Website 1 –</li>
-               <li>Website 2 –</li>
-               <li>Website 3 –</li>
+               <li>Website 1 – DigitalOcean, waar de code in dark mode is</li>
             </ul>
          </section>
 
@@ -65,10 +61,7 @@
          <section>
             <h2>4. Hoe kunnen wij dit oplossen</h2>
 
-            <p>
-               Dit is een faketekst. Alles wat hier staat is slechts om een indruk te geven van het grafische effect van
-               tekst op deze plek.
-            </p>
+            <p>Tijdens het maken van een website, test met een plugins om de toegankelijkheid van de website te checken</p>
          </section>
 
 
@@ -78,9 +71,8 @@
 
    <footer>
       <ol>
-         <li><a href="">Bron 1</a></li>
-         <li><a href="">Bron 2</a></li>
-         <li><a href="">Bron 3</a></li>
+         <li><a href="https://www.digitalocean.com/community/tutorials/how-to-use-ejs-to-template-your-node-application">Not readable</a></li>
+         <li><a href="https://chrome.google.com/webstore/detail/colorblindly/floniaahmccleoclneebhhmnjgdfijgg?hl=en">Colorblindly</a></li>
       </ol>
    </footer>
 
