Added My part and styling for the table of contents

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
 
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
@@ -16,19 +16,18 @@
       <h1>Team 3</h1>
    </header>
 
-
    <main>
 
-      <ol>
-         <li><a href="metaphor.html">Metaphor</a></li>
-         <li><a href="./subjects/afbeeldingen-uitzetten.html">Onderwerp 1</a></li>
-         <li><a href="./subjects/custom-fonts-uitzetten.html">Onderwerp 2</a></li>
-         <li><a href="./subjects/kleur-uitzetten-en-kleurenblindheid-instellen.html">Onderwerp 3</a></li>
-         <li><a href="./subjects/muis-trackpad-werkt-niet.html">Onderwerp 4</a></li>
-         <li><a href="./subjects/breedband-internet-uitzetten.html">Onderwerp 5</a></li>
-         <li><a href="./subjects/javascript-uitzetten.html">Onderwerp 6</a></li>
-         <li><a href="./subjects/cookies-niet-accepteren.html">Onderwerp 7</a></li>
-         <li><a href="./subjects/content-blockers-en-ad-blockers.html">Onderwerp 8</a></li>
+      <ol start="0">
+         <li><a href="metaphor.html">Metafoor</a></li>
+         <li><a href="./subjects/afbeeldingen-uitzetten.html">Afbeeldingen uitzetten</a></li>
+         <li><a href="./subjects/custom-fonts-uitzetten.html">Custom fonts uitzetten</a></li>
+         <li><a href="./subjects/kleur-uitzetten-en-kleurenblindheid-instellen.html">Kleur en kleurenblindheid instellen</a></li>
+         <li><a href="./subjects/muis-trackpad-werkt-niet.html">Muis/trackpad werkt niet</a></li>
+         <li><a href="./subjects/breedband-internet-uitzetten.html">Breedbandinternet uitzetten</a></li>
+         <li><a href="./subjects/javascript-uitzetten.html">JavaScript uitzetten</a></li>
+         <li><a href="./subjects/cookies-niet-accepteren.html">Cookies niet accepteren</a></li>
+         <li><a href="./subjects/content-blockers-en-ad-blockers.html">Content blockers en ad blockers</a></li>
       </ol>
 
    </main>
