--- a/metaphor.html
+++ b/metaphor.html
@@ -11,8 +11,13 @@
 
 <body>
 
-   <main>
+   <nav>
+      <ul>
+         <li><a href="../index.html">Terug</a></li>
+      </ul>
+   </nav>
 
+   <main>
       <!-- Draaideur voorbeeld 1 -->
       <section>
          <div></div>
