--- a/subjects/breedband-internet-uitzetten.html
+++ b/subjects/breedband-internet-uitzetten.html
@@ -7,13 +7,24 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>5.Breedband internet uitzetten</title>
 
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
+
    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
 
+   <nav>
+      <ul>
+         <li><a href="../index.html">Terug</a></li>
+      </ul>
+   </nav>
+
    <header>
-      <h1>5. Breedband internet uitzetten</h1>
+      <h1>5. Breedbandinternet uitzetten</h1>
    </header>
 
    <main>
@@ -22,53 +33,58 @@
 
          <section>
             <figure>
-               <img src="../assets/imgs/jevona/placeholder.jpeg" alt="">
+               <img src="../assets/imgs/danian/no_connection.png" alt="">
             </figure>
          </section>
 
          <!-- Vraag 1 -->
          <section>
-            <h2>1. Problemen die deze features kunnen veroorzaken</h2>
+            <h2>1. Problemen die deze features veroorzaken.</h2>
 
             <ul>
-               <li>Probleem 1 –</li>
-               <li>Probleem 2 –</li>
-               <li>Probleem 3 –</li>
+               <li>Laadtijden – Langzame laadtijden van websites.</li>
+               <li>Beperkingen – Geen of beperkte toegang tot video's en afbeeldingen.</li>
+               <li>Afhankelijk – Verminderde functionaliteiten die afhankelijk zijn van breedbaninternet.</li>
             </ul>
          </section>
 
 
          <!-- Vraag 2 -->
          <section>
-            <h2>2. Hoe zou je dit kunnen testen</h2>
+            <h2>2. Hoe je dit zou kunnen testen.</h2>
 
             <ul>
-               <li>Manier 1 –</li>
-               <li>Manier 2 –</li>
-               <li>Manier 3 –</li>
+               <li>Dev Tools – Je zou gebruik kunnen maken van de "Dev Tools" om een trage of geen interverbinding te simuleren.</li>
+               <li>Extensies – Je zou ook gebruik kunnen maken van een browser extensie om de internetsnelheid te beperken. </li>
             </ul>
          </section>
 
 
          <!-- Vraag 3 -->
          <section>
-            <h2>3. Websites waar dit ook problemen oplevert</h2>
+            <h2>3. Websites waar dit ook problemen oplevert.</h2>
 
             <ul>
-               <li>Website 1 –</li>
-               <li>Website 2 –</li>
-               <li>Website 3 –</li>
+               <li>Netflix – Zodra ik het breedbandinternet uitschakel bij Netflix, zie ik in 	het overzicht een eindeloze 'skeleton loader'. Wanneer ik tijdens het bekijken van een film het   breedbandinternet beperk tot een trage 3G-verbinding, verschijnt er een eindeloze laadbalk. Bij het uitschakelen van het breedbandinternet krijg ik een foutcode te zien.</li>
+               <li>Pinterest – Zodra ik de breedbandinternetverbinding op Pinterest throttle naar een langzame 3G-verbinding, worden de titels geladen en is er een skeleton loader voor de afbeeldingen. Deze worden vervolgens langzaam ingeladen. Het lijkt erop dat de advertenties voorrang hebben.</li>
             </ul>
          </section>
 
 
          <section>
-            <h2>4. Hoe kunnen wij dit oplossen</h2>
+            <h2>4. Hoe kunnen wij dit oplossen.</h2>
 
             <p>
-               Dit is een faketekst. Alles wat hier staat is slechts om een indruk te geven van het grafische effect van
-               tekst op deze plek.
+               Om de problemen op te lossen die ontstaan wanneer breedbandinternet is uitgeschakeld, kun je de website optimaliseren voor betere presetaties en gebruikerservaring door.  
             </p>
+
+            <ul>
+               <li>Afbeeldingen comprimeren – Het verkleinen van de bestandsgrootte van de afbeeldingen, zonder dat het al te veel ten koste gaat van de 	kwaliteit. </li>
+               <li>Lazy Loading – Bij "Lazy loading" worden afbeeldingen en andere media pas geladen wanneer ze daadwerkelijk in beeld komen 	tijdens het scrollen.</li>
+               <li>Content delivery network – Een CDN is een netwerk van servers, verspreid over de hele wereld, die gebruikt worden om websitecontent 	sneller te leveren aan gebruikers. </li>
+               <li>Minify – Door onnodige tekens, zoals spaties en opmerkingen uit je CSS en JavaScript bestanden te verwijderen wordt de bestandsgrootte kleiner.</li>
+            </ul>
+
          </section>
 
 
@@ -78,9 +94,9 @@
 
    <footer>
       <ol>
-         <li><a href="">Bron 1</a></li>
-         <li><a href="">Bron 2</a></li>
-         <li><a href="">Bron 3</a></li>
+         <li><a href="https://www.debugbear.com/blog/chrome-devtools-network-throttling">Bron 1</a></li>
+         <li><a href="https://imagify.io/blog/reasons-images-slow-websites/">Bron 2</a></li>
+         <li><a href="https://sematext.com/blog/improve-website-performance/">Bron 3</a></li>
       </ol>
    </footer>
 
