--- a/subjects/muis-trackpad-werkt-niet.html
+++ b/subjects/muis-trackpad-werkt-niet.html
@@ -7,11 +7,23 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>4. Muis en of trackpad werkt niet</title>
 
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
+
    <link rel="stylesheet" href="../css/style.css">
    <link rel="stylesheet" href="../css/members/nigel.css">
 </head>
 
 <body>
+
+   <nav>
+      <ul>
+         <li><a href="../index.html">Terug</a></li>
+      </ul>
+   </nav>
+
 
    <header>
       <h1>4. Muis en of trackpad werkt niet</h1>
