--- a/subjects/cookies-niet-accepteren.html
+++ b/subjects/cookies-niet-accepteren.html
@@ -7,10 +7,22 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>7. Cookies niet accepteren</title>
 
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
+
    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
+
+   <nav>
+      <ul>
+         <li><a href="../index.html">Terug</a></li>
+      </ul>
+   </nav>
+
 
    <header>
       <h1>7. Cookies niet accepteren</h1>
