--- a/subjects/javascript-uitzetten.html
+++ b/subjects/javascript-uitzetten.html
@@ -7,10 +7,21 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>6. JavaScript uitzetten</title>
 
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
+
    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
+
+   <nav>
+      <ul>
+         <li><a href="../index.html">Terug</a></li>
+      </ul>
+   </nav>
 
    <header>
       <h1>6. JavaScript uitzetten</h1>
@@ -22,53 +33,51 @@
 
          <section>
             <figure>
-               <img src="../assets/imgs/jevona/placeholder.jpeg" alt="">
+               <img src="../assets/imgs/danian/disabling_javascript.png" alt="">
             </figure>
          </section>
 
          <!-- Vraag 1 -->
          <section>
-            <h2>1. Problemen die deze features kunnen veroorzaken</h2>
+            <h2>1. Problemen die deze features veroorzaken.</h2>
 
             <ul>
-               <li>Probleem 1 –</li>
-               <li>Probleem 2 –</li>
-               <li>Probleem 3 –</li>
+               <li>Functionaliteiten – Functionaliteiten van de website kunnen worden beperkt of volledig zijn uitgeschakeld.</li>
+               <li>Gebruikerservaring – De gebruikerservaring kan negatief worden beïnvloed, aangezien sommige functies en effect mogelijk niet werken, omdat deze afhankelijk zijn van JavaScript.</li>
             </ul>
          </section>
 
 
          <!-- Vraag 2 -->
          <section>
-            <h2>2. Hoe zou je dit kunnen testen</h2>
+            <h2>2. Hoe je dit zou kunnen testen.</h2>
 
             <ul>
-               <li>Manier 1 –</li>
-               <li>Manier 2 –</li>
-               <li>Manier 3 –</li>
+               <li>Dev Tools – Je zou gebruik kunnen maken van de Developer Tools in je browser, om JavaScript uit te schakelen.</li>
+               <li>Extensies – Je zou extensies kunnen gebruiker om de JavaScript uit te schakelen. </li>
             </ul>
          </section>
 
 
          <!-- Vraag 3 -->
          <section>
-            <h2>3. Websites waar dit ook problemen oplevert</h2>
+            <h2>3. Websites waar dit ook problemen oplevert.</h2>
 
             <ul>
-               <li>Website 1 –</li>
-               <li>Website 2 –</li>
-               <li>Website 3 –</li>
+               <li>Netflix – Het overzicht van films op Netflix ziet er minder spectaculair uit zonder JavaScript, maar het lijkt erop dat je nog steeds door de films kunt bladeren. Het is echter niet mogelijk om de films te bekijken zonder JavaScript, naar mijn mening.</li>
+               <li>Pinterest – Pinterest daarentegen werkt niet zonder JavaScript, vandaar dat je ook de tekst "Oh no! Pinterest doesn't work without JavaScript" te zien krijgt.</li>
             </ul>
          </section>
 
 
          <section>
-            <h2>4. Hoe kunnen wij dit oplossen</h2>
+            <h2>4. Hoe kunnen wij dit oplossen.</h2>
 
-            <p>
-               Dit is een faketekst. Alles wat hier staat is slechts om een indruk te geven van het grafische effect van
-               tekst op deze plek.
-            </p>
+            <ul>
+               <li>Progressive Enhancement – De basisfunctionaliteit van de website implementeren zonder JavaScript en vervolgens extra functionaliteiten en effect toevoegen met behulp van JavaScript.  </li>
+               <li>Server- side rendering– Door gebruik te maken van server- side rendering om de inhoud van de website te genereren op de server in plaats van op de client. .</li>
+            </ul>
+
          </section>
 
 
@@ -78,11 +87,10 @@
 
    <footer>
       <ol>
-         <li><a href="">Bron 1</a></li>
-         <li><a href="">Bron 2</a></li>
-         <li><a href="">Bron 3</a></li>
+         <li><a href="https://github.com/cmda-minor-web/browser-technologies-2223/blob/main/slides/BT2223%20Les1%20-%20Progressive%20Enhancement.pdf">Bron 1</a></li>
       </ol>
    </footer>
+
 
 
 </body>
