--- a/metaphor.html
+++ b/metaphor.html
@@ -6,7 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Metaphor</title>
-   <link rel="stylesheet" href="./css/metaphor.css">
+   <link rel="stylesheet" href="../css/metaphor.css">
 </head>
 
 <body>
