--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Table of contents</title>
 
-   <link rel="stylesheet" href="../css/toc.css">
+   <link rel="stylesheet" href="/css/toc.css">
 </head>
 
 <body>
