--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
 
-   <link rel="stylesheet" href="/css/toc.css">
+   <link rel="stylesheet" href="./css/toc.css">
 </head>
 
 <body>
