--- a/metaphor.html
+++ b/metaphor.html
@@ -13,14 +13,14 @@
 
    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
 
-   <link rel="stylesheet" href="../css/metaphor.css">
+   <link rel="stylesheet" href="./css/metaphor.css">
 </head>
 
 <body>
 
    <nav>
       <ul>
-         <li><a href="../index.html">Terug</a></li>
+         <li><a href="./index.html">Terug</a></li>
       </ul>
    </nav>
 
