--- a/subjects/breedband-internet-uitzetten.html
+++ b/subjects/breedband-internet-uitzetten.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>5.Breedband internet uitzetten</title>
+   <title>5.Breedband uitzetten</title>
 
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
    </nav>
 
    <header>
-      <h1>5. Breedbandinternet uitzetten</h1>
+      <h1>5. Internet uitzetten</h1>
    </header>
 
    <main>
@@ -54,8 +54,10 @@
             <h2>2. Hoe je dit zou kunnen testen.</h2>
 
             <ul>
-               <li>Dev Tools – Je zou gebruik kunnen maken van de "Dev Tools" om een trage of geen interverbinding te simuleren.</li>
-               <li>Extensies – Je zou ook gebruik kunnen maken van een browser extensie om de internetsnelheid te beperken. </li>
+               <li>Dev Tools – Je zou gebruik kunnen maken van de "Dev Tools" om een trage of geen interverbinding te
+                  simuleren.</li>
+               <li>Extensies – Je zou ook gebruik kunnen maken van een browser extensie om de internetsnelheid te
+                  beperken. </li>
             </ul>
          </section>
 
@@ -65,8 +67,13 @@
             <h2>3. Websites waar dit ook problemen oplevert.</h2>
 
             <ul>
-               <li>Netflix – Zodra ik het breedbandinternet uitschakel bij Netflix, zie ik in 	het overzicht een eindeloze 'skeleton loader'. Wanneer ik tijdens het bekijken van een film het   breedbandinternet beperk tot een trage 3G-verbinding, verschijnt er een eindeloze laadbalk. Bij het uitschakelen van het breedbandinternet krijg ik een foutcode te zien.</li>
-               <li>Pinterest – Zodra ik de breedbandinternetverbinding op Pinterest throttle naar een langzame 3G-verbinding, worden de titels geladen en is er een skeleton loader voor de afbeeldingen. Deze worden vervolgens langzaam ingeladen. Het lijkt erop dat de advertenties voorrang hebben.</li>
+               <li>Netflix – Zodra ik het breedbandinternet uitschakel bij Netflix, zie ik in het overzicht een
+                  eindeloze 'skeleton loader'. Wanneer ik tijdens het bekijken van een film het breedbandinternet beperk
+                  tot een trage 3G-verbinding, verschijnt er een eindeloze laadbalk. Bij het uitschakelen van het
+                  breedbandinternet krijg ik een foutcode te zien.</li>
+               <li>Pinterest – Zodra ik de breedbandinternetverbinding op Pinterest throttle naar een langzame
+                  3G-verbinding, worden de titels geladen en is er een skeleton loader voor de afbeeldingen. Deze worden
+                  vervolgens langzaam ingeladen. Het lijkt erop dat de advertenties voorrang hebben.</li>
             </ul>
          </section>
 
@@ -75,14 +82,20 @@
             <h2>4. Hoe kunnen wij dit oplossen.</h2>
 
             <p>
-               Om de problemen op te lossen die ontstaan wanneer breedbandinternet is uitgeschakeld, kun je de website optimaliseren voor betere presetaties en gebruikerservaring door.  
+               Om de problemen op te lossen die ontstaan wanneer breedbandinternet is uitgeschakeld, kun je de website
+               optimaliseren voor betere presetaties en gebruikerservaring door.
             </p>
+            <!-- Ik weet het. -->
 
             <ul>
-               <li>Afbeeldingen comprimeren – Het verkleinen van de bestandsgrootte van de afbeeldingen, zonder dat het al te veel ten koste gaat van de 	kwaliteit. </li>
-               <li>Lazy Loading – Bij "Lazy loading" worden afbeeldingen en andere media pas geladen wanneer ze daadwerkelijk in beeld komen 	tijdens het scrollen.</li>
-               <li>Content delivery network – Een CDN is een netwerk van servers, verspreid over de hele wereld, die gebruikt worden om websitecontent 	sneller te leveren aan gebruikers. </li>
-               <li>Minify – Door onnodige tekens, zoals spaties en opmerkingen uit je CSS en JavaScript bestanden te verwijderen wordt de bestandsgrootte kleiner.</li>
+               <li>Afbeeldingen comprimeren – Het verkleinen van de bestandsgrootte van de afbeeldingen, zonder dat het
+                  al te veel ten koste gaat van de kwaliteit. </li>
+               <li>Lazy Loading – Bij "Lazy loading" worden afbeeldingen en andere media pas geladen wanneer ze
+                  daadwerkelijk in beeld komen tijdens het scrollen.</li>
+               <li>Content delivery network – Een CDN is een netwerk van servers, verspreid over de hele wereld, die
+                  gebruikt worden om websitecontent sneller te leveren aan gebruikers. </li>
+               <li>Minify – Door onnodige tekens, zoals spaties en opmerkingen uit je CSS en JavaScript bestanden te
+                  verwijderen wordt de bestandsgrootte kleiner.</li>
             </ul>
 
          </section>
